Fix "Politicas" / "Quantity Select" overlapping
Closes presupuestos#62

--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -5686,6 +5686,7 @@ Ese "25" es lo que indenta.
 .quantity-selection select {
   font-size: .875em;
   margin-bottom: .5em;
+  height: 33px;
 }
 .quantity-selection .glossary-link {
   font-size: .75em;
@@ -5694,7 +5695,7 @@ Ese "25" es lo que indenta.
   text-transform: uppercase;
 }
 .data-controllers.functional_view .quantity-selection {
-  margin-left: 2em;
+  text-align: center;
 }
 .layout-slider {
   height: 3.5em;
@@ -7028,6 +7029,14 @@ header[role="banner"] > .container-fluid .open-data-logo:hover {
 @media screen and (max-width: 768px) {
   .nav-rwd > li:last-child {
     border-top: 1px solid #1c282e;
+  }
+}
+.data-controllers.functional_view .quantity-selection {
+  margin-left: 3em;
+}
+@media (max-width: 767px) {
+  .data-controllers.functional_view .quantity-selection {
+    margin: 0.5em 0;
   }
 }
 .chartWrap {
