--- a/static/stylesheets/theme.less
+++ b/static/stylesheets/theme.less
@@ -395,3 +395,15 @@ header[role="banner"] {
     border-top: 1px solid #1c282e;
   }
 }
+
+// Fix Politicas / Data-Controller buttons overlapping
+
+.data-controllers.functional_view .quantity-selection {
+  margin-left: 3em;
+}
+
+@media (max-width: 767px){
+  .data-controllers.functional_view .quantity-selection{
+    margin: 0.5em 0;
+  }
+}
